# ActividadEvaluatoriaPrimerSemestre

./: README.md
finalAlgoritmos2HTTP/: Build.bat  CMakeLists.txt  Test.cpp  build.sh  client.html  compileTests.bat  main.cpp  package-lock.json  proxyserver.js
finalAlgoritmos2HTTP/Diagrams/: Classes.dio  UsosYSecuencia.dio
finalAlgoritmos2HTTP/include/: AlertSender.h  Datacenter.h  HttpController.h  Logger.h  MSForecastAPI.h  MenuHandler.h
finalAlgoritmos2HTTP/src/: HttpControler.cpp  Logger.cpp  MenuHandler.cpp
finalAlgoritmos2Original/: Build.bat  Classes.dio  UsosYSecuencia.dio  main.cpp
finalAlgoritmos2Original/include/: DatacenterClimateController.h  Logger.h  MenuHandler.h
finalAlgoritmos2Original/src/: DatacenterClimateController.cpp  MenuHandler.cpp
